static-server/css/main.css
/*global*/
* {
    font-family: 'Didact Gothic', sans-serif;
}

body {
    color: white;    
    background: #232526;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to top, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to top, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    
}
#banner {
    display: none;
} 

.games-card {
    border: 2px solid #0288D1;
    margin-right: 0;
    margin-left: 0;
    margin-bottom: 10px;
    padding-bottom: 10px;
    font-weight: bold;
    color: gainsboro;
    background-color: #414345;
}
.games-card-body {
    background-color: #414345;
}
#footer {
    height: 0;
    margin: 0;
    padding: 0;
}

h1 {
    text-align: center;
    color: #0288D1;
    font-family: 'Palanquin', sans-serif;
}

a.games {
    color: #0288D1;
}

a.games:hover {
    text-decoration: none;
}



/*PC only*/
@media screen and (min-width: 992px) {
    /* banner */
    #banner {
        display: block;
    }
    /*body*/
    .card {
        padding: 10px 50px 10px 50px;
        margin-right: 5%;
        margin-left: 5%;
        font-size: 1.5em;
    }

    #about-us-img {
        margin-bottom: 100px;
    }

    /*footer*/
    footer {
        padding-top: 50px;
    }
}

